
	* src/lmrob.c (normcnst, rho_lin, psi_lin, psip_lin, wgt_lin)
	(rho, psi, psip): Added support lgw psi function.
	* man/lmrob.control.Rd: updated to account for lgw.

	* tests/lmrob-psifns.R: added tests lgw psi function
	* tests/lmrob-psifns.Rout.save: updated accordingly

	* tests/lmrob-methods.Rout.save: updated, since constants for
	calculation of taus changed slightly


2010-07-12  Manuel Koller  <koller@stat.math.ethz.ch>

	* DESCRIPTION (Version): 0.6-1

	* src/lmrob.c (normcnst, rho_ggw, psi_ggw_vec, psi_ggw, psip_ggw)
	(wgt_ggw): Added support for custom constants for psi ggw.

	* R/lmrob.MM.R (.vcov.w): Modified constants for ggw psi function.
	(lmrob.control): Added method to calculate constants for ggw psi
	function.
	(lmrob.conv.cc, lmrob.ggw.mx, lmrob.ggw.ms, lmrob.ggw.ac)
	(lmrob.ggw.bp, lmrob.ggw.finda, lmrob.ggw.findc, lmrob.ggw.const):
	Methods to calculate constants for ggw psi.
	(lwgt): control argument optional.

	* tests/lmrob-psifns.R: added tests for custom tuning constants
	* tests/lmrob-psifns.Rout.save: added tests for custom tuning
	constants

	* experi-psi-rho-funs.R: added ggwPsi function, standardized
	s.t. Dpsi(0) = 1. Putting this into R/psi-rho-funs.R results in an
	error while "preparing for lazy-loading".

2010-06-25  Manuel Koller  <koller@stat.math.ethz.ch>

	* DESCRIPTION (Version): 0.6-0

	* NAMESPACE: dropped lmrob.control.sfs

	* R/lmrob.R (lmrob): "method" argument
	* man/lmrob.Rd: "method" argument

	* R/lmrob.MM.R (lmrob.control, lmrob.control.sfs): argument
	setting="KS2010" replaces lmrob.control.sfs. Setting a method
	involving a D step, sets default psi to ggw.

	* man/lmrob.control.Rd: "setting" argument

	* tests/lmrob-methods.R: "methods" and "psi" argument
	* tests/lmrob-methods.Rout.save: call output in summary changed
	* tests/lmrob-psifns.Rout.save: call output in summary changed

	* man/lmrob.control.Rd: Documentation details for tuning constants
	and alternative constants for .85 efficiency at the normal.
